--- a/learning-javascript/index.html
+++ b/learning-javascript/index.html
@@ -8,6 +8,7 @@
     <p>Welcome to <i>Learning JavaScript, 3rd Edition</i>.</p>
     <canvas id="mainCanvas"></canvas>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.24/paper-full.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
